Add testPage.html to templates

--- a/website/templates/testPage.html
+++ b/website/templates/testPage.html
@@ -8,7 +8,7 @@
 <li class="active">
     <a href="#">
         <span class="icon">
-            <ion-icon name="grid-outline"></ion-icon>
+            <ion-icon name="person-circle-outline"></ion-icon>
         </span>
         <span class="title">DELNARD</span>
     </a>
@@ -16,7 +16,7 @@
 <li>
     <a href="#">
         <span class="icon">
-            <ion-icon name="cog-outline"></ion-icon>
+            <ion-icon name="person-circle-outline"></ion-icon>
         </span>
         <span class="title">KYLLE JASPER</span>
     </a>
@@ -24,38 +24,11 @@
 <li>
     <a href="#">
         <span class="icon">
-            <ion-icon name="person-outline"></ion-icon>
+            <ion-icon name="person-circle-outline"></ion-icon>
         </span>
         <span class="title">JOHN PAUL</span>
     </a>
 </li>
-{% endblock %}
-
-<!-- =============== Flash Message ================ -->
-{% block popupmessage %}
-{% with messages = get_flashed_messages(with_categories=true) %}
-{% if messages %}
-{% for category, message in messages %}
-<div id="flash-message" class="info">
-  <div class="info__icon">
-    <svg xmlns="http://www.w3.org/2000/svg" width="24" viewBox="0 0 24 24" height="24" fill="none">
-      <path fill="#393a37"
-        d="m12 1.5c-5.79844 0-10.5 4.70156-10.5 10.5 0 5.7984 4.70156 10.5 10.5 10.5 5.7984 0 10.5-4.7016 10.5-10.5 0-5.79844-4.7016-10.5-10.5-10.5zm.75 15.5625c0 .1031-.0844.1875-.1875.1875h-1.125c-.1031 0-.1875-.0844-.1875-.1875v-6.375c0-.1031.0844-.1875.1875-.1875h1.125c.1031 0 .1875.0844.1875.1875zm-.75-8.0625c-.2944-.00601-.5747-.12718-.7808-.3375-.206-.21032-.3215-.49305-.3215-.7875s.1155-.57718.3215-.7875c.2061-.21032.4864-.33149.7808-.3375.2944.00601.5747.12718.7808.3375.206.21032.3215.49305.3215.7875s-.1155.57718-.3215.7875c-.2061.21032-.4864.33149-.7808.3375z">
-      </path>
-    </svg>
-  </div>
-  <div class="info__title">{{ message }}</div>
-  <div class="info__close">
-    <svg height="20" viewBox="0 0 20 20" width="20" xmlns="http://www.w3.org/2000/svg">
-      <path
-        d="m15.8333 5.34166-1.175-1.175-4.6583 4.65834-4.65833-4.65834-1.175 1.175 4.65833 4.65834-4.65833 4.6583 1.175 1.175 4.65833-4.6583 4.6583 4.6583 1.175-1.175-4.6583-4.6583z"
-        fill="#393a37"></path>
-    </svg>
-  </div>
-</div>
-{% endfor %}
-{% endif %}
-{% endwith %}
 {% endblock %}
 
 <!-- =============== Main Content ================ -->
@@ -120,48 +93,5 @@
     </div>
   </div>
 </div>
-
-<!-- Updated Modal structure -->
-<div id="customPopup" class="popup-modal"> <!-- Changed class name -->
-  <div class="new-popup-content"> <!-- Changed class name -->
-    <h3>NOTIFICATION</h3>
-    <p id="popupText">Kindly proceed with your prediction to enhance your learning experience.</p>
-    <div class="popup-buttons"> <!-- Changed class name -->
-      <button id="confirmButton" class="confirm-btn-explore" onclick="handleConfirm()">Continue</button> <!-- Changed class name -->
-      <button onclick="hidePopup()" class="cancel-btn">Cancel</button> <!-- Changed class name -->
-    </div>
-  </div>
-</div>
-
-<!-- Script to show the modal with 30-second delay -->
-<script>
-  window.onload = function() {
-    // Check if alerts_info is present
-    const alertsInfo = JSON.parse('{{ alerts_info | tojson | safe }}');
-    if (alertsInfo.length > 0) {
-      const alertMessages = alertsInfo.map(alert => alert.Alert).join('<br>');
-
-      // Delay the modal for 30 seconds
-      setTimeout(function() {
-        document.getElementById('customPopup').style.display = 'block'; // Show the modal after 30 seconds
-      }, 1250); // 30 seconds in milliseconds
-    }
-  };
-
-  // Function to handle survey button click
-  function handleConfirm() {
-    // Redirect or perform action to take the survey
-    window.location.href = "/studentsExplore"; // Update with your survey URL
-  }
-
-  // Function to hide the modal
-  function hidePopup() {
-    document.getElementById('customPopup').style.display = 'none'; // Hide the modal
-  }
-
-  // Close button functionality (if you have a close button)
-  document.getElementById('closeButton').onclick = hidePopup;
-</script>
-
 
 {% endblock %}
