--- a/website/templates/studentsHome.html
+++ b/website/templates/studentsHome.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 <!-- =============== Title ================ -->
-{% block title %}PLP Grading System{% endblock %}
+{% block title %}PLP System | Home{% endblock %}
 
 <!-- =============== Sidebars ================ -->
 {% block sidebar %}
