--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -7,7 +7,7 @@
     <script src="{{ url_for('static', filename='index.js') }}" defer></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"/>
     <link rel="icon" href="{{ url_for('static', filename='images/plpLogo.svg') }}"/>
-    <title>Login | PLP Grading System</title>
+    <title>Login | PLP System</title>
   </head>
 
   <body>
